--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "csvtojson": "^2.0.10",
     "juery": "^1.0.0",
     "papaparse": "^5.3.2",
